--- a/works.css
+++ b/works.css
@@ -75,8 +75,29 @@ a{
   font-size: 24px;
 }
 
+.arrow{
+  position: absolute;
+  right:-7px;
+  width: 15px;
+  top:13px;
+  transform: translate(-50%,-50%);
+  transition: 0.8s;
+}
+
+.rotate{
+  transform: translate(-50%,-50%) rotate(180deg);
+  transition: 0.5s;
+}
+
 .nome{
   margin-left: 25px;
+  transition: 0.5s;
+  transition-property: background-color;
+}
+
+.color{
+    background-color: rgb(0, 255, 0);
+    transition: 0.5s;
 }
 
 .categoria{
