--- a/works.css
+++ b/works.css
@@ -2,6 +2,7 @@ body{
 font-family: 'Almarai', sans-serif;
 padding:0px;
 margin:0px;
+cursor:default;
 }
 
 /* PHONE */
@@ -93,6 +94,11 @@ a{
   margin-left: 25px;
   transition: 0.5s;
   transition-property: background-color;
+  cursor: pointer;
+}
+
+.pointer{
+  cursor: pointer;
 }
 
 .color{
@@ -125,6 +131,7 @@ a{
 
 .link{
   text-decoration: underline;
+  line-height: 30px;
 }
 
 .display_none{
@@ -134,12 +141,9 @@ a{
 
 
 
+/* TABLET */
 
-
-
-/* DESKTOP */
-
-@media (min-width: 768px){
+@media (min-width: 768px) {
 
 .line{
   height: 3px;
@@ -176,7 +180,7 @@ a{
   position: absolute;
   left:14vw;
   transition: 0.5s;
-  transition-property: background-color;
+  transition-property: background-color!important;
 }
 
 .container:hover .nome{
@@ -194,20 +198,64 @@ a{
 }
 
 .img{
-  width: calc(50% - 10px);
-  margin-left: 0px;
+  width: calc(100% - 17vw);
+  margin-left: 17vw;
   margin-top: 30px;
-  display: inline-block;
+  display: inline-flex;
 }
 
-.work_description_total{
+/* .work_description_total{
   position: absolute;
-  left:45vw;
+  left:calc(53% + 20px);
   width:30%;
   top: 40px;
+} */
+
+.work_description_total{
+  position: relative;
+  display: inline-block;
+  margin-top:0px;
+  margin-left: 17vw;
+  width: 50%;
 }
 
 .work_description{
-  font-size: 25px;
+  font-size: 22px;
   margin-top: 20px;
+  margin-left: 0px;
+}
+
+.link{
+  line-height: 35px;
+}
+
+.green:hover{
+  color: rgb(0, 255, 0);
+  transition: 0.2s;
+}
+
+}
+
+
+/* DESKTOP */
+
+@media (min-width: 1000px){
+
+  .img{
+    width: 50%;
+    /* height:calc(100% - 100px); */
+    margin-left: 0px;
+    margin-top: 30px;
+    display: inline-flex;
+    /* border: 1px solid black; */
+  }
+
+  .work_description_total{
+    position: absolute;
+    margin-left: 0vw;
+    left:calc(53% + 10px);
+    width:30%;
+    top: 40px;
+  }
+
 }
