--- a/works.css
+++ b/works.css
@@ -10,7 +10,7 @@ cursor:default;
 /* generali */
 .line{
   width: 100%;
-  height: 2.1px;
+  height: 2px;
   background-color: black;
 }
 
@@ -53,6 +53,11 @@ a{
   left: 85px;
   background-color: rgb(0, 255, 0);
 }
+
+#home{
+  right:0px;
+}
+
 
 
 
