--- a/works.css
+++ b/works.css
@@ -44,10 +44,6 @@ a{
   top:60%;
 }
 
-.header_name:hover{
-  background-color: rgb(0, 255, 0);
-  transition: 0.5s;
-}
 
 #works{
   left: 75px;
@@ -56,10 +52,7 @@ a{
 
 #contact{
   left:150px;
-}
-
-#about{
-
+  cursor: pointer;
 }
 
 #home{
@@ -67,11 +60,121 @@ a{
 }
 
 
+/* contact */
 
+@keyframes container_open {
+  from{
+    top: 30px;
+    left: 200px;
+    padding: 0px;
+    opacity: 0;
+    transition: 1s;
+    font-size: 0px;
+    height: 0px;
+  }
+  to{
+    top: 50vh;
+    left: 50vw;
+    padding: 40px 15px 20px 15px;
+    opacity: 1;
+    font-size: 20px;
+    height: 85px;
+  }
+}
+
+@keyframes container_close {
+  from{
+    top: 50vh;
+    left: 50vw;
+    padding: 40px 15px 20px 15px;
+    opacity: 1;
+    font-size: 20px;
+    height: 85px;
+  }
+  to{
+    top: 30px;
+    left: 200px;
+    padding: 0px;
+    opacity: 0;
+    transition: 1s;
+    font-size: 0px;
+    height: 0px;
+  }
+}
+
+.contact_container{
+  position: fixed;
+  transform: translate(-50%, -50%);
+  background-color: rgb(0, 255, 0);
+  top: 50vh;
+  left: 50vw;
+  z-index: 3;
+  font-size: 20px;
+  padding: 40px 15px 20px 15px;
+  line-height: 30px;
+  text-align: center;
+  opacity: 1;
+  height: 85px;
+  animation: container_open 0.5s;
+  /* border: 2px solid black; */
+}
+
+.contact_container_sparito{
+  z-index: 3;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  background-color: rgb(0, 255, 0);
+  top: 30px;
+  left: 200px;
+  padding: 0px;
+  opacity: 0;
+  font-size: 0px;
+  height: 0px;
+  animation: container_close 0.5s;
+}
+
+.green_background{
+  background-color: rgb(0, 255, 0);
+}
+
+.exit{
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  transform: translate(-50%,0) rotate(180deg);
+  left: 50%;
+  top: 10px;
+  background-image: url("images/x.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 15px;
+  cursor: pointer;
+  /* background-color: rgb(0, 255, 0);
+  border: 2px solid black; */
+}
+
+.exit:hover{
+  background-image: url("images/x_white.png");
+  transition: 0.2s;
+}
+
+
+.contact_popup:hover{
+  color: white;
+  transition: 0.2s;
+}
+
+.contact_popup{
+  text-decoration: underline;
+}
 
 
 
 /* body */
+
+#zefir_nome{
+  width: 100px;
+}
 
 .false_container{
   height:80px!important;
@@ -171,6 +274,11 @@ a{
 
 .header_name{
   font-size: 24px;
+}
+
+.header_name:hover{
+  background-color: rgb(0, 255, 0);
+  transition: 0.5s;
 }
 
 #works{
