--- a/home.css
+++ b/home.css
@@ -2,6 +2,12 @@ body{
 font-family: 'Almarai', sans-serif;
 padding:0px;
 margin:0px;
+
+user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 /* PHONE */
@@ -76,6 +82,7 @@ a{
     transition: 1s;
     font-size: 0px;
     height: 0px;
+    text-align: center;
   }
   to{
     top: 50vh;
@@ -84,6 +91,7 @@ a{
     opacity: 1;
     font-size: 20px;
     height: 85px;
+    text-align: center;
   }
 }
 
@@ -95,6 +103,7 @@ a{
     opacity: 1;
     font-size: 20px;
     height: 85px;
+    text-align: center;
   }
   to{
     top: 30px;
@@ -104,6 +113,7 @@ a{
     transition: 1s;
     font-size: 0px;
     height: 0px;
+    text-align: center;
   }
 }
 
@@ -231,6 +241,104 @@ a{
 #home{
   right:0px;
 }
+
+
+/* contact */
+
+
+@keyframes container_open {
+  from{
+    top: 30px;
+    left: 380px;
+    padding: 0px;
+    opacity: 0;
+    transition: 1s;
+    font-size: 0px;
+    height: 0px;
+    text-align: center;
+  }
+  to{
+    top: 50vh;
+    left: 50vw;
+    padding: 60px 20px 20px 20px;
+    opacity: 1;
+    font-size: 30px;
+    height: 140px;
+    text-align: center;
+  }
+}
+
+@keyframes container_close {
+  from{
+    top: 50vh;
+    left: 50vw;
+    padding: 60px 20px 20px 20px;
+    opacity: 1;
+    font-size: 30px;
+    height: 140px;
+    text-align: center;
+  }
+  to{
+    top: 30px;
+    left: 380px;
+    padding: 0px;
+    opacity: 0;
+    transition: 1s;
+    font-size: 0px;
+    height: 0px;
+    text-align: center;
+  }
+}
+
+.contact_container{
+  position: fixed;
+  transform: translate(-50%, -50%);
+  background-color: rgb(0, 255, 0);
+  top: 50vh;
+  left: 50vw;
+  z-index: 3;
+  font-size: 30px;
+  padding: 60px 20px 20px 20px;
+  line-height: 45px;
+  text-align: center;
+  opacity: 1;
+  height: 140px;
+  animation: container_open 0.5s;
+  /* border: 2px solid black; */
+}
+
+.contact_container_sparito{
+  z-index: 3;
+  position: fixed;
+  transform: translate(-50%, -50%);
+  background-color: rgb(0, 255, 0);
+  top: 30px;
+  left: 200px;
+  padding: 0px;
+  opacity: 0;
+  font-size: 0px;
+  height: 0px;
+  animation: container_close 0.5s;
+}
+
+
+.exit{
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  transform: translate(-50%,0) rotate(180deg);
+  left: 50%;
+  top: 20px;
+  background-image: url("images/x.png");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: 25px;
+  cursor: pointer;
+  /* background-color: rgb(0, 255, 0);
+  border: 2px solid black; */
+}
+
+
 
 /* body */
 
