--- a/home.css
+++ b/home.css
@@ -202,8 +202,62 @@ a{
   line-height: 30px;
 }
 
-.sottolineato{
+.sottolineato_verde{
   background-color: rgb(0, 255, 0);
+}
+
+.sottolineato:before{
+  cursor:pointer;
+  text-decoration: underline;
+  content: "Manzoni Elisa";
+}
+
+.sottolineato:hover:after{
+  color: rgb(0, 255, 0);
+  content: " (ME)";
+}
+
+.link_scopri{
+  display: inline-block;
+  margin-top: 40px;
+  line-height: 35px;
+}
+
+.link_progetti{
+    text-decoration: underline;
+}
+
+@keyframes arrow_right1 {
+  0%{ margin-left: 10px}
+  6.25% {margin-left: 20px}
+  12.5% {margin-left: 10px}
+  18.75% {margin-left: 20px}
+  25% {margin-left: 10px}
+  100% {margin-left: 10px}
+}
+
+@keyframes arrow_right2 {
+  0%{ margin-left: 10px}
+  40%{ margin-left: 10px}
+  46.25% {margin-left: 20px}
+  52.5% {margin-left: 10px}
+  58.75% {margin-left: 20px}
+  65% {margin-left: 10px}
+  100% {margin-left: 10px}
+}
+
+.arrow_right{
+  display: inline-block;
+  height:20px;
+  transform: translate(0%, 10%);
+}
+
+.arrow_right1{
+    animation: arrow_right1 3s infinite linear;
+}
+
+.arrow_right2{
+    animation: arrow_right2 3s infinite linear;
 }
 
 
@@ -347,10 +401,23 @@ a{
 }
 
 .home_description{
-  position:absolute;
   font-size: 43px;
   line-height: 58px;
   width: 60%;
 }
+
+.arrow_right{
+  height:30px;
+  transform: translate(0%, 10%);
+}
+
+.link_progetti:hover{
+  color:rgb(0,255,0);
+  transition: 0.2s;
+  text-decoration-color: rgb(0,255,0)!important;
+}
+
+
+
 
 }
