--- a/home.css
+++ b/home.css
@@ -206,15 +206,24 @@ a{
   background-color: rgb(0, 255, 0);
 }
 
-.sottolineato:before{
+.elisa_manzoni:before{
   cursor:pointer;
   text-decoration: underline;
   content: "Manzoni Elisa";
 }
 
-.sottolineato:hover:after{
+.elisa_manzoni:hover:after{
   color: rgb(0, 255, 0);
   content: " (ME)";
+}
+
+.coding:before{
+  content: "coding";
+}
+
+.coding:hover:after{
+  color: rgb(0, 255, 0);
+  content: " (clicca per provare un mio esperimento)";
 }
 
 .link_scopri{
@@ -411,11 +420,28 @@ a{
   transform: translate(0%, 10%);
 }
 
+.arrow_right{
+  height:30px;
+  transform: translate(0%, 10%);
+}
+
 .link_progetti:hover{
   color:rgb(0,255,0);
   transition: 0.2s;
   text-decoration-color: rgb(0,255,0)!important;
 }
+
+.coding:before{
+  cursor:pointer;
+  text-decoration: underline;
+  content: "coding";
+}
+
+.coding:hover:after{
+  color: rgb(0, 255, 0);
+  content: " (clicca per provare un mio esperimento)";
+}
+
 
 
 
