--- a/home.css
+++ b/home.css
@@ -3,6 +3,9 @@ font-family: 'Almarai', sans-serif;
 padding:0px;
 margin:0px;
 
+overflow-x:hidden;
+overflow-y:hidden;
+
 user-select: none; /* supported by Chrome and Opera */
   -webkit-user-select: none; /* Safari */
   -khtml-user-select: none; /* Konqueror HTML */
@@ -198,23 +201,22 @@ a{
 
 .home_description{
   font-weight: 400;
-  font-size: 25px;
-  line-height: 30px;
+  font-size: 30px;
+  line-height: 35px;
 }
 
 .sottolineato_verde{
   background-color: rgb(0, 255, 0);
 }
 
-.elisa_manzoni:before{
+.ME:before{
   cursor:pointer;
   text-decoration: underline;
-  content: "Manzoni Elisa";
+  content: "ME";
 }
 
-.elisa_manzoni:hover:after{
+.elisa_manzoni{
   color: rgb(0, 255, 0);
-  content: " (ME)";
 }
 
 .coding:before{
@@ -235,6 +237,8 @@ a{
 
 .link_progetti{
     text-decoration: underline;
+    line-height: 38px;
+    width: 250px;
 }
 
 @keyframes arrow_right1 {
@@ -426,6 +430,11 @@ a{
   transform: translate(0%, 10%);
 }
 
+.link_progetti{
+  line-height: 55px;
+  width: 100%;
+}
+
 .link_progetti:hover{
   color:rgb(0,255,0);
   transition: 0.2s;
@@ -442,6 +451,22 @@ a{
   color: rgb(0, 255, 0);
   /* content: " (clicca per provare un mio esperimento)"; */
   content: " (click to try one of my experiments)";
+}
+
+
+.ME:before{
+  cursor:pointer;
+  text-decoration: underline;
+  content: "ME";
+}
+
+.ME:hover:after{
+  color: rgb(0, 255, 0);
+  content: " (Manzoni Elisa)";
+}
+
+.elisa_manzoni{
+  display: none;
 }
 
 
