--- a/works.css
+++ b/works.css
@@ -231,12 +231,11 @@ a{
 
 .color{
     background-color: rgb(0, 255, 0);
-    transition: 0.5s;
 }
 
 .categoria{
-  margin-left: 75px;
-  margin-top: 3px;
+  /* margin-left: 75px; */
+  margin-top: -10px;
 }
 
 .line_works{
@@ -245,16 +244,14 @@ a{
 }
 
 .img{
-  width: calc(100% - 75px);
-  margin-left: 75px;
+  width: calc(100%);
+  /* margin-left: 75px; */
   margin-top: 10px;
 }
 
 .work_description{
   font-weight: 400;
   font-size: 20px;
-  margin-left: 75px;
-  margin-top: 10px;
 }
 
 .link{
