--- a/izi.css
+++ b/izi.css
@@ -16,17 +16,13 @@ user-select: none; /* supported by Chrome and Opera */
 /* generali */
 .line{
   width: 100%;
-  height: 2.1px;
+  height: 2px;
   background-color: black;
 }
 
 a{
   text-decoration: none;
   color: black;
-}
-
-.display_none{
-  display: none;
 }
 
 /* header */
@@ -54,17 +50,10 @@ a{
   top:60%;
 }
 
-.header_name:hover{
-  background-color: rgb(0, 255, 0);
-  transition: 0.5s;
-}
-
-#about{
-  background-color: rgb(0, 255, 0);
-}
 
 #works{
   left: 75px;
+  /* background-color: rgb(0, 255, 0); */
 }
 
 #contact{
@@ -75,6 +64,7 @@ a{
 #home{
   right:0px;
 }
+
 
 /* contact */
 
@@ -188,143 +178,91 @@ a{
   text-decoration: underline;
 }
 
+.display_none{
+  display: none;
+}
 
 
 
 /* body */
 
-.body{
-  position: absolute;
+.false_container{
+  height:80px!important;
+}
+
+.container{
+  position:relative;
+  /* margin-top: 5px; */
   width:90vw;
-  left:5vw;
-  top:70px;
+  margin-left: 5vw;
+  /* border: 1px solid green; */
 }
 
-.descrizione{
-  font-size: 28px;
-}
-
-.descrizione2{
-  margin-top: 50px;
+.container-small{
+  position:relative;
+  display: inline-block;
+  margin-top: 10px;
+  width:100%;
   font-size: 20px;
   margin-bottom: 20px;
+  line-height: 26px;
+  /* border: 1px solid green; */
 }
 
-.pokemon:before{
-  cursor:pointer;
-  text-decoration: underline;
-  content: "Pokemon";
-}
-
-.pokemon:hover:after{
-  color: rgb(0, 255, 0);
-  content: " (my favourite one is Charmander)";
-}
-
-.arrighetti:before{
-  cursor:pointer;
-  text-decoration: underline;
-  content: "Valentina Arrighetti";
-}
-
-.arrighetti:hover:after{
-  color: rgb(0, 255, 0);
-  content: " (an italian volleyball player)";
-}
-
-.alvar:before{
-  cursor:pointer;
-  text-decoration: underline;
-  content: "Alvar Aalto";
-}
-
-.alvar:hover:after{
-  color: rgb(0, 255, 0);
-  content: " (a Finnish designer)";
-}
-
-
-.contact{
-  font-size: 18px;
-  line-height: 25px;
-  margin-bottom: 50px;
-}
-
-.underline{
-  text-decoration: underline;
-}
-
-.line_description{
-  /* margin-top: 20px;
-  margin-bottom: 20px; */
+.img{
+  position:relative;
   display: inline-block;
+  margin-top: 5px;
+  width:100%;
+  /* border: 1px solid green; */
 }
 
-.about_box{
-  position: relative;
-  font-size: 20px;
-  font-weight: 500;
-  width: 100%;
+.margin_left{
+  /* margin-left: 2%; */
+}
+
+.margin_top{
+  margin-top: 50px!important;
+}
+
+.title{
+  font-size: 30px;
+  margin-bottom: 20px;
+  line-height: 35px;
+}
+
+.color{
+  background-color: rgb(0,255,0);
+}
+
+.question{
   margin-top: 20px;
-  margin-bottom: 15px;
-  /* height: 50px; */
-}
-
-.arrow{
-  position: relative;
-  display:inline-block;
-  right:-7px;
-  width: 15px;
-  top:0px;
-  margin-left: 10px;
-  transform: translate(-50%,-50%);
-  transition: 0.8s;
-}
-
-.rotate{
-  transform: translate(-50%,-50%) rotate(180deg);
-  transition: 0.5s;
-}
-
-.last{
-  margin-bottom: 100px;
-}
-
-.about_description{
-  position: relative;
-  font-size: 15px;
   margin-bottom: 20px;
-  /* border: 1px solid black; */
-}
-
-.years{
-  position: absolute;
-  display: inline-block;
-  width: 10%;
-  font-size: 15px;
-  height: 100%;
-  /* border: 1px solid black; */
-}
-
-.description{
-  position: relative;
-  display: inline-block;
-  width: 80%;
-  margin-left: 50px;
-  font-size: 15px;
-  /* border: 1px solid black; */
+  font-size: 30px;
+  line-height: 30px;
 }
 
 .bold{
   font-weight: 600;
 }
 
-.display_none{
-  display: none;
+.width{
+  position: relative;
+  display: inline-block;
+  /* width:500px!important; */
+  margin-left: 5%;
 }
 
-.color{
-  background-color: rgb(0,255,0);
+.process{
+  font-size: 30px;
+}
+
+.link{
+  text-decoration: underline;
+}
+
+.link:hover{
+  color:rgb(0,255,0);
 }
 
 
@@ -350,16 +288,17 @@ a{
   font-size: 24px;
 }
 
+.header_name:hover{
+  background-color: rgb(0, 255, 0);
+  transition: 0.5s;
+}
+
 #works{
   left: 150px;
 }
 
 #contact{
   left:300px;
-}
-
-#home{
-  right:0px;
 }
 
 
@@ -461,74 +400,104 @@ a{
 
 /* body */
 
-.body{
-  position: absolute;
+.container{
+  margin-top: 5px;
   width:95vw;
-  left:2.5vw;
-  top:80px;
+  margin-left: 2.5vw;
+}
+
+.container-small{
+  position:relative;
+  display: inline-block;
+  margin-top: 10px;
+  width:80%;
+  font-size: 20px;
+  margin-bottom: 20px;
+  line-height: 26px;
+  /* border: 1px solid green; */
+}
+
+.img{
+  position:relative;
+  display: inline-block;
+  margin-top: 5px;
+  width:48%;
+  /* border: 1px solid green; */
 }
 
 
-.descrizione{
-  width: 80vw;
-  font-size: 35px;
-  line-height: 45px;
-  top: 110px;
-  margin-bottom: 50px;
-}
-
-.descrizione2{
-  width: 80vw;
-  font-size: 25px;
-  margin-bottom: 60px;
-}
-
-.about_box{
-  font-size: 25px;
+.width{
+  position: relative;
+  display: inline-block;
+  width:500px!important;
+  margin-left: 5%;
 }
 
 
-/* PC */
 
-@media (min-width: 1024px) {
+/* DESKTOP */
 
-  .descrizione{
-    width: 750px;
+@media (min-width: 1200px){
+
+  .container{
+    position:relative;
+    /* margin-top: 5px; */
+    width:90vw;
+    margin-left: 5vw;
+    /* border: 1px solid green; */
   }
 
-  .descrizione2{
-    width: 800px;
-  }
-
-  .about_box:hover{
-    color: rgb(0, 255, 0);
-    cursor:pointer;
-    transition: 0.2s;
-  }
-
-  .nome:hover{
-    background-color: rgb(0, 255, 0);
-    cursor:pointer;
-    transition: 0.2s;
-  }
-
-  .years{
+  .container-small{
+    position:relative;
+    display: inline-block;
+    margin-top: 10px;
+    width:48%;
     font-size: 20px;
-    /* border: 1px solid black; */
+    margin-bottom: 20px;
+    line-height: 26px;
+    /* border: 1px solid green; */
   }
 
-  .description{
-    margin-left: 70px;
-    font-size: 20px;
-    /* border: 1px solid black; */
+  .img{
+    position:relative;
+    display: inline-block;
+    margin-top: 5px;
+    width:48%;
+    /* border: 1px solid green; */
   }
 
-  .about_description{
-    font-size: 20px;
+  .margin_left{
+    margin-left: 2%;
   }
 
+  .margin_top{
+    margin-top: 50px!important;
+  }
 
+  .title{
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
 
+  .question{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+  }
 
+  .bold{
+    font-weight: 600;
+  }
+
+  .width{
+    position: relative;
+    display: inline-block;
+    width:500px!important;
+    margin-left: 5%;
+  }
+
+  .process{
+    font-size: 30px;
+  }
 
 }
