--- a/works.css
+++ b/works.css
@@ -268,6 +268,32 @@ a{
   display: none;
 }
 
+.link_progetti{
+  font-size: 22px;
+    text-decoration: underline;
+    line-height: 28px;
+    width: 250px;
+}
+
+@keyframes arrow_right1 {
+  0%{ margin-left: 10px}
+  6.25% {margin-left: 20px}
+  12.5% {margin-left: 10px}
+  18.75% {margin-left: 20px}
+  25% {margin-left: 10px}
+  100% {margin-left: 10px}
+}
+
+.arrow_right{
+  display: inline-block;
+  height:20px;
+  transform: translate(0%, 10%);
+}
+
+.arrow_right1{
+    animation: arrow_right1 3s infinite linear;
+}
+
 
 
 
@@ -509,6 +535,12 @@ a{
     height: calc(50vw*0.553);
   }
 
+    .container_behance{
+      position: absolute;
+      top: calc(50vw*0.5533*3 + 250px);
+      height: 150px;
+    }
+
   .work_description{
     position: absolute;
     font-size: 22px;
@@ -543,6 +575,38 @@ a{
   .work4{
     position: absolute;
     top:calc(50vw * 0.553 - 90px);
+  }
+
+
+  .link_progetti{
+    font-size: 30px;
+    line-height: 55px;
+    width: 100%;
+  }
+
+  .link_progetti:hover{
+    color:rgb(0,255,0);
+    transition: 0.2s;
+    text-decoration-color: rgb(0,255,0)!important;
+  }
+
+  @keyframes arrow_right1 {
+    0%{ margin-left: 10px}
+    6.25% {margin-left: 20px}
+    12.5% {margin-left: 10px}
+    18.75% {margin-left: 20px}
+    25% {margin-left: 10px}
+    100% {margin-left: 10px}
+  }
+
+  .arrow_right{
+    display: inline-block;
+    height:20px;
+    transform: translate(0%, 10%);
+  }
+
+  .arrow_right1{
+      animation: arrow_right1 3s infinite linear;
   }
 
 
