--- a/jukebox.css
+++ b/jukebox.css
@@ -53,7 +53,7 @@ a{
 
 #works{
   left: 75px;
-  background-color: rgb(0, 255, 0);
+  /* background-color: rgb(0, 255, 0); */
 }
 
 #contact{
@@ -178,13 +178,13 @@ a{
   text-decoration: underline;
 }
 
+.display_none{
+  display: none;
+}
+
 
 
 /* body */
-
-#zefir_nome{
-  width: 100px;
-}
 
 .false_container{
   height:80px!important;
@@ -192,111 +192,87 @@ a{
 
 .container{
   position:relative;
-  margin-top: 5px;
+  /* margin-top: 5px; */
   width:90vw;
   margin-left: 5vw;
   /* border: 1px solid green; */
 }
 
-.lavori_nomi{
+.container-small{
+  position:relative;
   display: inline-block;
-  font-weight: 400;
-  font-size: 22px;
-}
-
-.arrow{
-  position: absolute;
-  right:-7px;
-  width: 15px;
-  top:13px;
-  transform: translate(-50%,-50%);
-  transition: 0.8s;
-}
-
-.rotate{
-  transform: translate(-50%,-50%) rotate(180deg);
-  transition: 0.5s;
-}
-
-.nome{
-  margin-left: 23px;
-  transition: 0.5s;
-  transition-property: background-color;
-  cursor: pointer;
-}
-
-.pointer{
-  cursor: pointer;
-}
-
-.color{
-    background-color: rgb(0, 255, 0);
-}
-
-.categoria{
-  /* margin-left: 75px; */
-  margin-top: -10px;
-}
-
-.line_works{
-  margin-top: 20px;
+  margin-top: 10px;
+  width:100%;
+  font-size: 20px;
   margin-bottom: 20px;
+  line-height: 26px;
+  /* border: 1px solid green; */
 }
 
 .img{
-  width: calc(100%);
-  /* margin-left: 75px; */
-  margin-top: 10px;
+  position:relative;
+  display: inline-block;
+  margin-top: 5px;
+  width:100%;
+  /* border: 1px solid green; */
 }
 
-.work_description{
-  font-weight: 400;
-  font-size: 20px;
-  margin-top: 5px;
+.margin_left{
+  /* margin-left: 2%; */
 }
 
 .margin_top{
-  margin-top: 15px;
+  margin-top: 50px!important;
+}
+
+.title{
+  font-size: 30px;
+  margin-bottom: 20px;
+  line-height: 35px;
+}
+
+.color{
+  background-color: rgb(0,255,0);
+}
+
+.question{
+  margin-top: 20px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  line-height: 30px;
+}
+
+.bold{
+  font-weight: 600;
+}
+
+.width{
+  position: relative;
+  display: inline-block;
+  /* width:500px!important; */
+  margin-left: 5%;
+}
+
+.process{
+  font-size: 30px;
 }
 
 .link{
   text-decoration: underline;
-  line-height: 30px;
 }
 
-.display_none{
-  display: none;
+.link:hover{
+  color:rgb(0,255,0);
 }
 
-.link_progetti{
-  font-size: 22px;
-    text-decoration: underline;
-    line-height: 28px;
-    width: 250px;
+
+.border{
+  border: 1px solid black;
 }
 
-@keyframes arrow_right1 {
-  0%{ margin-left: 10px}
-  6.25% {margin-left: 20px}
-  12.5% {margin-left: 10px}
-  18.75% {margin-left: 20px}
-  25% {margin-left: 10px}
-  100% {margin-left: 10px}
-}
 
-.arrow_right{
-  display: inline-block;
-  height:20px;
-  transform: translate(0%, 10%);
-}
 
-.arrow_right1{
-    animation: arrow_right1 3s infinite linear;
-}
 
-.green2{
-  color: rgb(0,255,0);
-}
 
 
 
@@ -435,189 +411,98 @@ a{
   margin-left: 2.5vw;
 }
 
-.lavori_nomi{
-  font-size: 30px;
-}
-
-.nome{
-  position: absolute;
-  /* left:14vw; */
-  transition: 0.5s;
-  transition-property: background-color!important;
-}
-
-.container:hover .nome{
-  background-color: rgb(0, 255, 0);
-  transition: 0.2s;
-}
-
-.categoria{
+.container-small{
   position:relative;
+  display: inline-block;
   margin-top: 10px;
+  width:80%;
+  font-size: 20px;
+  margin-bottom: 20px;
+  line-height: 26px;
+  /* border: 1px solid green; */
 }
 
 .img{
-  width: calc(100% - 5vw);
-  /* margin-left: 17vw; */
-  margin-top: 20px;
-  display: inline-flex;
+  position:relative;
+  display: inline-block;
+  margin-top: 5px;
+  width:48%;
+  /* border: 1px solid green; */
 }
 
-.line_works{
-  margin-top: 20px;
-  margin-bottom: 20px;
-  width:100%;
-}
 
-/* .work_description_total{
-  position: absolute;
-  left:calc(53% + 20px);
-  width:30%;
-  top: 40px;
-} */
-
-.work_description_total{
+.width{
   position: relative;
   display: inline-block;
-  margin-top:10px;
-  /* margin-left: 17vw; */
-  width: 50%;
+  width:500px!important;
+  margin-left: 5%;
 }
 
-.work_description{
-  font-size: 22px;
-  margin-top: 5px;
-  margin-left: 0px;
-}
-
-.link{
-  line-height: 35px;
-}
-
-.margin_top{
-  margin-top: 20px;
-}
-
-.green:hover{
-  color: rgb(0, 255, 0);
-  transition: 0.2s;
-}
-
-}
 
 
 /* DESKTOP */
 
 @media (min-width: 1200px){
 
-  .img{
-    position: absolute;
-    width: 50%;
-    left:0px;
-    top:-10px;
-    /* border: 1px solid black; */
+  .container{
+    position:relative;
+    /* margin-top: 5px; */
+    width:90vw;
+    margin-left: 5vw;
+    /* border: 1px solid green; */
   }
 
-  .container_deposito{
-    position: absolute;
-    /* border: 1px solid red; */
-    height: calc(50vw*0.553);
-  }
-
-  .container_izi{
-    position: absolute;
-    top: calc(50vw*0.5533 + 130px);
-    height: calc(50vw*0.553);
-    /* border: 1px solid red; */
-  }
-
-  .container_jukebox{
-    position: absolute;
-    top: calc(50vw*0.5533*2 + 175px);
-    /* border: 1px solid red; */
-    height: calc(50vw*0.553);
-  }
-
-  .container_arthur{
-    position: absolute;
-    top: calc(50vw*0.5533*3 + 220px);
-    /* border: 1px solid red; */
-    height: calc(50vw*0.553);
-  }
-
-    .container_behance{
-      position: absolute;
-      top: calc(50vw*0.5533*4 + 300px);
-      height: 150px;
-    }
-
-  .work_description{
-    position: absolute;
-    font-size: 22px;
-    left:50vw;
-  }
-
-  .lavori_nomi{
-    position: absolute;
-    left:50vw;
-  }
-
-  .line_works{
-    position: absolute;
-    top:calc(50vw * 0.553);
-  }
-
-  .work1{
-    position: absolute;
-    top:40px;
-  }
-
-  .work2{
-    position: absolute;
-    top:65px;
-  }
-
-  .work3{
-    position: absolute;
-    top:125px;
-  }
-
-  .work4{
-    position: absolute;
-    top:calc(50vw * 0.553 - 90px);
-  }
-
-
-  .link_progetti{
-    font-size: 30px;
-    line-height: 55px;
-    width: 100%;
-  }
-
-  .link_progetti:hover{
-    color:rgb(0,255,0);
-    transition: 0.2s;
-    text-decoration-color: rgb(0,255,0)!important;
-  }
-
-  @keyframes arrow_right1 {
-    0%{ margin-left: 10px}
-    6.25% {margin-left: 20px}
-    12.5% {margin-left: 10px}
-    18.75% {margin-left: 20px}
-    25% {margin-left: 10px}
-    100% {margin-left: 10px}
-  }
-
-  .arrow_right{
+  .container-small{
+    position:relative;
     display: inline-block;
-    height:20px;
-    transform: translate(0%, 10%);
+    margin-top: 10px;
+    width:48%;
+    font-size: 20px;
+    margin-bottom: 20px;
+    line-height: 26px;
+    /* border: 1px solid green; */
   }
 
-  .arrow_right1{
-      animation: arrow_right1 3s infinite linear;
+  .img{
+    position:relative;
+    display: inline-block;
+    margin-top: 5px;
+    width:48%;
+    /* border: 1px solid green; */
   }
 
+  .margin_left{
+    margin-left: 2%;
+  }
+
+  .margin_top{
+    margin-top: 50px!important;
+  }
+
+  .title{
+    font-size: 30px;
+    margin-bottom: 20px;
+  }
+
+  .question{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 30px;
+  }
+
+  .bold{
+    font-weight: 600;
+  }
+
+  .width{
+    position: relative;
+    display: inline-block;
+    width:500px!important;
+    margin-left: 5%;
+  }
+
+  .process{
+    font-size: 30px;
+  }
 
 }
